--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>odin recipes</title>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<h1>Odin Recipes</h1>
-<ul>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/icedlatte.html">Iced latte</a></li>
-    <li><a href="recipes/nuggets.html">Nuggets</a></li>
-  </ul>
+<div class="title"><h1>Odin Recipes</h1></div>
+<button class="lasagna"> <a href="recipes/lasagna.html">Lasagna</a> </button>
+<button class="latte"> <a href="recipes/icedlatte.html">Iced latte</a> </button>
+<button class="nuggets"> <a href="recipes/nuggets.html">Nuggets</a> </button>
 </body>
 </html>
